@@ -31,7 +31,6 @@
 #include "b-feph.h"
 #include "b-fro.h"
 #include "b-grok.h"
-#include "b-isr.h"
 
 #define rcsdir     "RCS"
 #define rcsdirlen  (sizeof rcsdir - 1)
@@ -502,127 +501,5 @@ isSLASH (int c)
     }
 #endif
 }
-
-#if !defined HAVE_GETCWD
-char *
-getcwd (char *buf, size_t size)
-{
-  char const usrbinpwd[] = "/usr/bin/pwd";
-#define binpwd (usrbinpwd+4)
-
-  register FILE *fp;
-  register int c;
-  register char *p, *lim;
-  int closeerrno, closeerror, e, fd[2], wstatus;
-  bool readerror, toolong;
-  pid_t child;
-
-  if (!size)
-    {
-      errno = EINVAL;
-      return NULL;
-    }
-  if (PROB (pipe (fd)))
-    return NULL;
-  maybe_reset_sigchld ();
-  if (!(child = vfork ()))
-    {
-      if (!PROB (close (fd[0]))
-          && (STDOUT_FILENO == fd[1]
-              || (STDOUT_FILENO == (close (STDOUT_FILENO),
-                                    fcntl (fd[1], F_DUPFD, STDOUT_FILENO))
-                  && !PROB (close (fd[1])))))
-        {
-          close (STDERR_FILENO);
-          execl (binpwd, binpwd, NULL);
-          execl (usrbinpwd, usrbinpwd, NULL);
-        }
-      exit_failurefully ();
-    }
-  e = errno;
-  closeerror = close (fd[1]);
-  closeerrno = errno;
-  fp = NULL;
-  wstatus = 0;
-  readerror = toolong = false;
-  p = buf;
-  if (0 <= child)
-    {
-      fp = fdopen (fd[0], "r");
-      e = errno;
-      if (fp)
-        {
-          lim = p + size;
-          for (p = buf;; *p++ = c)
-            {
-              if (PROB (c = getc (fp)))
-                {
-                  if (feof (fp))
-                    break;
-                  if (ferror (fp))
-                    {
-                      readerror = true;
-                      e = errno;
-                      break;
-                    }
-                }
-              if (p == lim)
-                {
-                  toolong = true;
-                  break;
-                }
-            }
-        }
-#if defined HAVE_WAITPID
-      if (PROB (waitpid (child, &wstatus, 0)))
-        wstatus = 1;
-#else  /* !defined HAVE_WAITPID */
-      {
-        pid_t w;
-
-        do
-          {
-            if (PROB (w = wait (&wstatus)))
-              {
-                wstatus = 1;
-                break;
-              }
-          }
-        while (w != child);
-      }
-#endif  /* !defined HAVE_WAITPID */
-    }
-  if (!fp)
-    {
-      close (fd[0]);
-      errno = e;
-      return NULL;
-    }
-  if (PROB (fclose (fp)))
-    return NULL;
-  if (readerror)
-    {
-      errno = e;
-      return NULL;
-    }
-  if (closeerror)
-    {
-      errno = closeerrno;
-      return NULL;
-    }
-  if (toolong)
-    {
-      errno = ERANGE;
-      return NULL;
-    }
-  if (wstatus || p == buf || *--p != '\n')
-    {
-      errno = EACCES;
-      return NULL;
-    }
-  *p = '\0';
-  return buf;
-}
-#endif  /* !defined HAVE_GETCWD */
 
 /* rcsfnms.c ends here */
